--- a/project2-starter.ipynb
+++ b/project2-starter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -82,20 +82,19 @@
     {
      "data": {
       "text/plain": [
-       "admit       400\n",
-       "gre         398\n",
-       "gpa         398\n",
-       "prestige    399\n",
-       "dtype: int64"
+       "400"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_raw.count()\n"
+    "df_raw.count()\n",
+    "#correction\n",
+    "#should be used instead in case there are nans present\n",
+    "len(df_raw)"
    ]
   },
   {
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -320,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAEACAYAAABRQBpkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEBRJREFUeJzt3X2snnddx/H3Z5RNBlgOkbbSDra5AS3GB3AdDxruODKd\nNm0TTV2iZmNgTEazRRKzln969o/QEUM0ZH8QzTyajlFIcBXJ2jXjxoCwgdvCpHVpJC212rOwjSkh\nYBu+/nFfmzdn7Xno7ut+OOf9Srpe1+/8rvv+nuX0fM7v4bpOqgpJ0sp20agLkCSNnmEgSTIMJEmG\ngSQJw0CShGEgSWIIYZDkT5L8a5JvJtmX5OIkU0kOJXkyycEkq/v6705yLMnRJNe3XZ8kCdLmfQZJ\nXg98GXhLVf1vkk8DXwA2AU9X1V1J7gCmqmpXkk3APuAaYANwGLi6vBlCklo1jGmilwGvTLIKeAVw\nCtgGzDQfnwG2N8dbgfuq6mxVHQeOAZuHUKMkrWithkFV/Sfw58B36IXAc1V1GFhbVbNNn9PAmuaS\n9cDJvpc41bRJklrUahgkeQ29UcAbgdfTGyH8PjB32sdpIEkaoVUtv/57gW9X1TMAST4HvAuYTbK2\nqmaTrAOeavqfAi7ru35D0/YTkhgeknQBqirnam87DL4DvCPJTwE/Aq4Dvg58H7gZ2AvcBNzf9D8A\n7EvycXrTQ1cBj5zrhV1T1rhKpqmaHnUZ0osk58wBoOUwqKpHknwWeAw40/z9SeDVwP4ktwAngB1N\n/yNJ9gNHmv63upNIktrX6tbStiQxIzS2HBloXCU57zSRdyBLA3bTTZ1RlyAtmSMDSVohHBlIkuZl\nGEiSDANJkmEgScIwkAZuenrUFUhL524iacAS8MtT48jdRJKkeRkGkiTDQJJkGEiSMAykgduzZ9QV\nSEvnbiJJWiHcTSRJmpdhIEkyDCRJhoEkCcNAGjifTaRJ5G4iacB8NpHGlbuJJEnzMgwkSYaBJMkw\nkCRhGEgD57OJNIncTSRJK4S7iSRJ8zIMJEnthkGSNyV5LMmjzd/PJbktyVSSQ0meTHIwyeq+a3Yn\nOZbkaJLr26xPktQztDWDJBcB/wFcC+wEnq6qu5LcAUxV1a4km4B9wDXABuAwcPXcBQLXDCRp6cZl\nzeC9wL9X1UlgGzDTtM8A25vjrcB9VXW2qo4Dx4DNQ6xResl8NpEm0TDD4PeAe5vjtVU1C1BVp4E1\nTft64GTfNaeaNmli3HnnqCuQlm4oYZDk5fR+6v9M0zR3jsc5H0kaoVVDep8bgH+pqu8257NJ1lbV\nbJJ1wFNN+yngsr7rNjRtLzLdNxbvdDp0Op1B1yxJE63b7dLtdhfVdygLyEk+BTxQVTPN+V7gmara\ne54F5GvpTQ89iAvImjA+wlrjar4F5NbDIMmlwAngyqr6n6bttcB+eqOAE8COqvpe87HdwPuBM8Dt\nVXXoHK9pGGhsGQYaVyMNgzYYBhpn09PuKNJ4MgwkSWNzn4EkaUwZBpIkw0CSZBhIkjAMpIFzJ5Em\nkbuJpAHzPgONK3cTSZLmZRhIkgwDSZJhIElieI+wlsbCa18Lzz7b/vvknEt0gzM1Bc880+57aGVx\nN5FWlOWy02e5fB4aLncTSZLmZRhIkgwDSZJhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKE\nYSBJwjCQJGEYSJIwDCRJGAaSJIYQBklWJ/lMkqNJvpXk2iRTSQ4leTLJwSSr+/rvTnKs6X992/VJ\nkoYzMvgL4AtVtRH4ReDfgF3A4ap6M/AQsBsgySZgB7ARuAG4O2n7FwhKkloNgyQ/DfxaVd0DUFVn\nq+o5YBsw03SbAbY3x1uB+5p+x4FjwOY2a5QktT8yuAL4bpJ7kjya5JNJLgXWVtUsQFWdBtY0/dcD\nJ/uuP9W0SZJatGoIr/824INV9Y0kH6c3RTT3V3kv+Vd7T09Pv3Dc6XTodDoXXqUkLUPdbpdut7uo\nvqla8vfhRUuyFvhqVV3ZnP8qvTD4OaBTVbNJ1gFfrKqNSXYBVVV7m/4PAHuq6uE5r1tt1q3lK4Hl\n8KWzXD4PDVcSquqc67CtThM1U0Enk7ypaboO+BZwALi5absJuL85PgDcmOTiJFcAVwGPtFmjJKn9\naSKA24B9SV4OfBt4H/AyYH+SW4AT9HYQUVVHkuwHjgBngFsdAkhS+1qdJmqL00S6UMtlemW5fB4a\nrpFNE0mSJoNhIEkaypqBNDaKwDK4p736/isNgmGgFSXUsphrT4wCDZbTRJIkw0CSZBhIkjAMJEkY\nBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiS\nMAwkSSwQBkne0nd8yZyPvaOtoiRJw7XQyODevuOvzvnY3QOuRRqKZPL/TE2N+v+ilptVC3w85zk+\n17k09qraf49kOO8jDdJCI4M6z/G5ziVJE2qhkcGGJH9JbxTw/DHN+frFvEGS48BzwI+BM1W1OckU\n8GngjcBxYEdVPdf03w3cApwFbq+qQ0v6jCRJS5aaZzyb5Kb5Lq6qmQXfIPk28PaqeravbS/wdFXd\nleQOYKqqdiXZBOwDrgE2AIeBq2tOkUnmNkljw2kijaskVNU5p/jnHRnM980+yRsW+/68eDpqG/Ce\n5ngG6AK7gK3AfVV1Fjie5BiwGXh4ke8lSboAC95nkOSdSX43yZrm/BeS3At8ZZHvUcCDSb6e5ANN\n29qqmgWoqtPAmqZ9PXCy79pTLHI6ShoXe/aMugJp6eYdGST5GLAFeBy4I8lB4APAR+jN6y/Gu6vq\nv5K8DjiU5EkGsBg9PT39wnGn06HT6Sz1JaRW9H1pSiPV7XbpdruL6rvQmsER4G1V9cNm0fck8PNV\ndfxCCkuyB/g+vUDpVNVsknXAF6tqY5JdQFXV3qb/A8Ceqnp4zuu4ZiBJSzTfmsFC00Q/rKofAjQL\nwMeWEgRJLk3yqub4lcD1wBPAAeDmpttNwP3N8QHgxiQXJ7kCuAp4ZLHvJ0m6MAttLb0yyYG+8yua\n89D7CX7rAtevBT6XpJr32ldVh5J8A9if5BbgBLCD3gseSbIfOAKcAW51CCBJ7Vtomug952h+/oJU\n1ZdaqWoBThNJ0tK9lGmi19BbI/hS843/Y/S2gv4N/78DSFIfF5A1iRYaGXwFuLGqTjbnjwPXAa8E\n7qmq64ZS5YvrcmSgseVNZxpXF3zTGXDx80HQ+HJVPQ083SwIS5KWgYWmiX7iQblVtbPv9HWDL0eS\nNAoLhcHDSf5obmOSP8Ytn5K0bCy0ZrAG+HvgR8CjTfPbgUuA7c8/UmLYXDPQOHPNQOPqpTyo7ing\nXUl+HXhr0/yPVfXQgGuUlg2fTaRJNO/IYFw5MpCkpXsp9xlIklYAw0CSZBhIkgwDSRKGgTRwPptI\nk8jdRNKAeZ+BxpW7iSRJ8zIMJEmGgSTJMJAkYRhIA+eziTSJ3E0kSSuEu4kkSfMyDCRJhoEkyTCQ\nJGEYSAPns4k0idxNJA2YzybSuHI3kSRpXoaBJGk4YZDkoiSPJjnQnE8lOZTkySQHk6zu67s7ybEk\nR5NcP4z6JGmlG9bI4HbgSN/5LuBwVb0ZeAjYDZBkE7AD2AjcANyd5JzzW5KkwWk9DJJsAH4L+Ku+\n5m3ATHM8A2xvjrcC91XV2ao6DhwDNrddozRIPptIk2gYI4OPA38K9O+vWFtVswBVdRpY07SvB072\n9TvVtEkTw62lmkSr2nzxJL8NzFbV40k683Rd8ka86b5/cZ1Oh05nvpeXpJWn2+3S7XYX1bfV+wyS\n/BnwB8BZ4BXAq4HPAb8CdKpqNsk64ItVtTHJLqCqam9z/QPAnqp6eM7rep+BJC3RyO4zqKoPV9Ub\nqupK4Ebgoar6Q+AfgJubbjcB9zfHB4Abk1yc5ArgKuCRNmuUJLU8TTSPjwL7k9wCnKC3g4iqOpJk\nP72dR2eAWx0CSFL7fByFNGDT0y4iazzNN01kGEgD5rOJNK58NpEkaV6GgSTJMJAkGQaSJAwDaeB8\nNpEmkbuJJGmFcDeRJGlehoEkyTCQJBkGkiQMA2ngfC6RJpG7iaQB89lEGlfuJpIkzcswkCQZBpIk\nw0CShGEgDZzPJtIkcjeRNI/knBsvBs6vZw3DfLuJVg27GGmS+E1aK4XTRJIkw0CSZBhIkjAMJEkY\nBpIkDANJEoaBJAnDQJJEy2GQ5JIkDyd5LMkTSfY07VNJDiV5MsnBJKv7rtmd5FiSo0mub7M+SVJP\n64+jSHJpVf0gycuArwC3Ab8DPF1VdyW5A5iqql1JNgH7gGuADcBh4Oq5z57wcRSStHQj/eU2VfWD\n5vASeo+/KGAbMNO0zwDbm+OtwH1VdbaqjgPHgM1t1ygN0s6dO0ddgrRkrYdBkouSPAacBh6sqq8D\na6tqFqCqTgNrmu7rgZN9l59q2qSJ8fnPf37UJUhLNoyRwY+r6pfpTftsTvJWeqODn+jWdh2SpPMb\n2lNLq+q/k3SB3wRmk6ytqtkk64Cnmm6ngMv6LtvQtL3I9PT0C8edTodOp9NC1dLi7Ny584URwYkT\nJ7j88ssB2LJlC5/4xCdGWJlWsm63S7fbXVTfVheQk/wMcKaqnkvyCuAg8FHgPcAzVbX3PAvI19Kb\nHnoQF5A1YS6//HKOHz8+6jKkFxnl7zP4WWAmyUX0pqQ+XVVfSPI1YH+SW4ATwA6AqjqSZD9wBDgD\n3Op3fUlqX6thUFVPAG87R/szwHvPc81HgI+0WZfUpi1btoy6BGnJ/LWXkrRCjPQ+A0nS+DMMJEmG\ngSTJMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRKGgSQJ\nw0CShGEgScIwkCRhGEiSMAykget2u6MuQVoyw0AaMMNAk8gwkCSxatQFSMtBt9t9YURw5513vtDe\n6XTodDqjKUpaAsNAGoC53/Snp6dHVot0IZwmkiS1GwZJNiR5KMm3kjyR5LamfSrJoSRPJjmYZHXf\nNbuTHEtyNMn1bdYntcFpIU2itkcGZ4EPVdVbgXcCH0zyFmAXcLiq3gw8BOwGSLIJ2AFsBG4A7k6S\nlmuUpBWv1TCoqtNV9Xhz/H3gKLAB2AbMNN1mgO3N8Vbgvqo6W1XHgWPA5jZrlAbNraWaRENbM0hy\nOfBLwNeAtVU1C73AANY03dYDJ/suO9W0SZJaNJQwSPIq4LPA7c0IoeZ0mXsuSRqi1reWJllFLwj+\nrqrub5pnk6ytqtkk64CnmvZTwGV9l29o2s71um2VLL1k/fcaSJMgVe3+UJ7kb4HvVtWH+tr2As9U\n1d4kdwBTVbWrWUDeB1xLb3roQeDqartISVrhWg2DJO8G/gl4gt5UUAEfBh4B9tMbBZwAdlTV95pr\ndgPvB87Qm1Y61FqBkiRgCCMDSdL48w5kaUCS/HWS2STfHHUt0lIZBtLg3AP8xqiLkC6EYSANSFV9\nGXh21HVIF8IwkCQZBpIkw0CShGEgDVqaP9JEMQykAUlyL/DPwJuSfCfJ+0Zdk7RY3nQmSXJkIEky\nDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCQB/wf7e5GTZDrTBgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10e0bc6d0>"
+       "<matplotlib.figure.Figure at 0x110e56850>"
       ]
      },
      "metadata": {},
@@ -336,7 +335,7 @@
    ],
    "source": [
     "#boxplot 1 # using the dataset where we have just dropped all the nans\n",
-    "plt.figure()\n",
+    "\n",
     "plt.boxplot(df_drop['gre'])\n",
     "plt.ylabel('GRE')\n",
     "plt.show()\n",
